# Martins6.github.io

./: README.md  about.Rmd  create_folder_struct.py  index.html  index.xml  pyproject.toml  sitemap.xml
docs/: about.html  index.html  index.xml  search.json  sitemap.xml
docs/posts/: index.html  posts.json
portfolio/: pelicanconf.py
portfolio/content/pages/: about.md  certifications.md  jobs.md  keywords.md  projects.md  publications.md
portfolio/output/: archives.html  authors.html  categories.html  index.html  tags.html
portfolio/output/feeds/: all.atom.xml
portfolio/output/pages/: about.html  certifications.html  keywords.html  previous-jobs.html  projects.html  publications.html
posts/: index.html  posts.json
